# fucha

./: .gitignore  Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml
app/: database.py  main.py  redis.py  settings.py
app/core/: limiter.py
app/domain/token/: csrf.py  exceptions.py  token.py
app/domain/user/: exceptions.py  model.py
app/logs/: logger_config.py
app/middlewares/: AccessMiddleware.py  AuthMiddleware.py  CookieMiddleware.py  DeviceDefinitionMiddleware.py  FlashMiddleware.py  LoggerMiddleware.py  __init__.py
app/models/: EmailConfirmToken.py  PasswordResetToken.py  Role.py  User.py  __init__.py
app/routes/: __init__.py  auth.py  test.py
app/routes/admin/: __init__.py  admin.py  home.py
app/routes/api/: __init__.py  api.py  auth.py
app/routes/client/: __init__.py  auth.py  challenges.py  home.py  profile.py
app/routes/web/: web.py
app/schemas/: user_schema.py
app/seeds/: admin.py  roles.py
app/static/admin/css/: style.css
app/static/client/css/: style.css
app/static/client/js/: scripts.js
app/static/web/css/: san_francisco.css  style.css
app/templates/admin/: home.html
app/templates/auth/: login.html  welcome.html
app/templates/client/: welcome.html
app/templates/errors/: 429.html  mobile-only.html
app/templates/web/: home.html
app/utils/: filters.py  flash.py  generate_tokens.py  get_current_user.py  jwt_tokens.py  security.py  user_exists.py
migrations/: env.py
migrations/versions/: 30f0b2b4a21b_added_emailconfirmtoken_model.py  6c11a71b0672_added_passwordresettoken_model.py
(+11 files in other folders)
