[project]
name = "Fucha"
version = "0.1.0"
description = "Kirill and David project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.0",
    "uvicorn[standard]>=0.35.0",
    "pydantic>=2.11.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.21.0",
    "passlib[bcrypt]>=1.7.4",
    "pyjwt>=2.10.0",
    "httpx>=0.28.0",
    "redis>=5.0.0",
    "python-dotenv>=1.1.0",
    "loguru>=0.6.0",
    "pydantic-settings>=2.12.0",
    "jinja2>=3.1.6",
    "itsdangerous>=2.2.0",
    "pytz>=2025.2",
    "email-validator>=2.3.0",
    "python-multipart>=0.0.21",
    "fastapi-mail>=1.6.1",
    "greenlet>=3.3.0",
    "alembic>=1.18.0",
    "argon2-cffi>=25.1.0",
    "Pillow>=10.0.0",
    "black>=25.12.0",
    "isort>=7.0.0",
    "flake8>=7.3.0",
    "mypy>=1.19.1",
    "python-slugify>=8.0.4",
    "slowapi>=0.1.9",
    "celery>=5.6.3",
    "flower>=2.0.1",
    "aiofiles>=25.1.0",
]
